# checkmk

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .cppcheck-suppressions  .dir-locals.el  .dockerignore  .editorconfig  .envrc  .eslintignore  .eslintrc.json  .f12  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .groovylintrc.json  .gulpconf.json  .isort.cfg  .layering.yaml  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .pylintrc-windows  .sass-lint.yml  .shellcheckrc  .site  .style.yapf  .stylelintignore  .travis.yml  .yamllint.yml  AGENTS.md  AUTHORS  BAZEL.md  BI.fehlt  BUGS.bi  (+123 more)
agents/cmk-agent-ctl/: .f12  Cargo.toml  cargo_build.cmd  cargo_env
agents/cmk-agent-ctl/.cargo/: config.toml
agents/cmk-agent-ctl/src/: agent_receiver_api.rs  certs.rs  cli.rs  config.rs  configuration.rs  constants.rs  delete_connection.rs  dump.rs  import_connection.rs  lib.rs  log_ext.rs  mailslot_transport.rs  main.rs  marcv_api.rs  misc.rs  monitoring_data.rs  pull.rs  push.rs  registration.rs  setup.rs  site_spec.rs  status.rs  tls_server.rs  types.rs  uuid.rs
agents/cmk-agent-ctl/tests/: test.rs  test_cli.rs  test_integration.rs  test_pull.rs  test_status.rs
agents/modules/windows/: .gitignore  BUILD  BUILD.bazel  Makefile  README.md  WindowsServerPatch.reg  build.cmd  build_environment.cmd  build_environment_legacy.cmd  build_pipfile_lock.cmd  build_piplock.cmd  build_python.cmd  build_the_cached.cmd  build_the_module.cmd  build_venv.cmd  cabarchive.BUILD.bazel  clean_environment.cmd  deploy_sources.cmd  exec_cmd.bat  extract_msi.py  install.cmd  install_legacy.cmd  install_pipenv.cmd  install_python.cmd  make_cab.ps1  make_exe_wrappers.py  pack_cab.py  patch_environment.cmd  patch_pipfile.py  pip_offline.py  postinstall-3.4.4.cmd  postinstall.cmd  python_cab.bzl  python_to_cab.cmd  python_to_zip.cmd  pyvenv.cfg  readme.md  refresh_msi_pins.py  refresh_wheel_pins.py  save_python.cmd  (+7 more)
agents/windows/: .f12  .gitignore  BUILD  CONTENTS  ChronoUtils.h  Configurable.cc  Configurable.h  Configuration.cc  Configuration.h  CrashHandler.cc  CrashHandler.h  Crypto.cc  Crypto.h  Environment.cc  Environment.h  EventLog.cc  EventLog.h  EventLogBase.cc  EventLogBase.h  EventLogVista.cc  EventLogVista.h  ExternalCmd.cc  ExternalCmd.h  IEventLog.cc  IEventLog.h  ListenSocket.cc  ListenSocket.h  Logger.cc  Logger.h  LoggerAdaptor.h  Makefile  Makefile.am  ModuleControl.h  OHMMonitor.cc  OHMMonitor.h  OWNERS  OutputProxy.cc  OutputProxy.h  PerfCounter.cc  PerfCounter.h  (+63 more)
agents/windows/cfg_examples/: OWNERS  mk_oracle_cfg.ps1  msoffice_cfg.json
agents/windows/dependencies/: readme.txt  unpack_all.cmd  unpack_package.cmd
agents/windows/frozen_binaries/: Makefile  Makefile.include  pyinstaller-deps.make
agents/windows/it/: MontyPython.cc  _test_section_openhardwaremonitor.py  conftest.py  lock.py  remote.py  test_agent_start_parameters.py  test_old_agent_start_parameters.py  test_old_section_check_mk.py  test_old_section_df.py  test_old_section_dotnet_clrmemory.py  test_old_section_eventlog.py  test_old_section_fileinfo.py  test_old_section_logfiles.py  test_old_section_mem.py  test_old_section_mrpe.py  test_old_section_plugin_group.py  test_old_section_ps.py  (+25 more)
bazel/module/: gcc.MODULE.bazel  js.MODULE.bazel  oci.MODULE.bazel  py.MODULE.bazel
bazel/tools/: .clang-tidy  .groovylintrc.json  0001-Make-IWYU-executable-configurable.patch  BUILD  BUILD.osslsigncode.bazel  aspects.bzl  extract_os_packages.py  license_header_checker.py  lint_astrein.bzl  lint_ps_script_analyzer.bzl  lint_python_extensions.bzl  multitool.lock.json  mypy_wrapper.py  mypy_wrapper.sh  package.json  paseo.user.bazelrc  pnpm-lock.yaml  powershell_repositories.bzl  prettier.config.cjs  ps_script_analyzer_wrapper.ps1  python_extension_checker.py  requirements.txt  run-clang-tidy  run-iwyu  run-shellcheck  run-shfmt  run-taplo  workspace_status.sh
livestatus/: .f12  .gitignore  AndingFilter.cc  AndingFilter.h  ClientQueue.h  Column.cc  Column.h  ColumnsColumn.cc  ColumnsColumn.h  ContactsColumn.cc  ContactsColumn.h  CustomVarsColumn.h  CustomVarsFilter.cc  CustomVarsFilter.h  DoubleColumn.cc  DoubleColumn.h  DoubleColumnFilter.h  Downtime.h  DowntimesColumn.h  EmptyColumn.cc  EmptyColumn.h  Filter.h  GlobalCountersColumn.cc  GlobalCountersColumn.h  HostContactsColumn.cc  HostContactsColumn.h  HostSpecialIntColumn.h  HostgroupsColumn.cc  HostgroupsColumn.h  HostlistColumn.cc  HostlistColumn.h  HostlistColumnFilter.cc  HostlistColumnFilter.h  HostlistStateColumn.cc  HostlistStateColumn.h  InputBuffer.cc  InputBuffer.h  IntColumn.cc  IntColumn.h  IntColumnFilter.cc  (+60 more)
livestatus/iwyu-mappings/: check_mk.imp
livestatus/nagios/: broker.h  cgiauth.h  cgiutils.h  comments.h  common.h  config.h  downtime.h  locations.h  macros.h  nagios.h  nebcallbacks.h  neberrors.h  nebmods.h  nebmodules.h  nebstructs.h  objects.h  perfdata.h  skiplist.h  sretention.h  statusdata.h
livestatus/nagios4/: bitmap.h  broker.h  cgiutils.h  defaults.h  downtime.h  fanout.h  iobroker.h  iocache.h  libnagios.h  locations.h  macros.h  nagios.h  nebmods.h  nebmodules.h  nsutils.h  pqueue.h  runcmd.h  squeue.h  sretention.h  worker.h
livestatus/src/: .clang_complete  .f12  .gitignore  Aggregator.h  AndingFilter.cc  AndingFilter.h  AtomicInt32PointerColumn.h  AttributeBitmaskColumn.cc  AttributeBitmaskColumn.h  AttributeListAsIntColumn.cc  AttributeListAsIntColumn.h  AttributeListColumn.cc  AttributeListColumn.h  AttributeListColumnUtils.cc  AttributeListColumnUtils.h  AttributeListFilter.cc  AttributeListFilter.h  AttributeListLambdaColumn.cc  AttributeListLambdaColumn.h  AttributelistColumn.cc  AttributelistColumn.h  AttributelistFilter.cc  AttributelistFilter.h  AttributesDictColumn.h  AttributesLambdaColumn.cc  AttributesLambdaColumn.h  Average.cc  Average.h  BitMask.h  BlobColumn.cc  BlobColumn.h  BoolColumn.cc  BoolColumn.h  BoolLambdaColumn.h  BoolPointerColumn.h  ChronoUtils.h  ClientQueue.cc  ClientQueue.h  CmcNebTypeDefs.h  Column.cc  (+453 more)
livestatus/standalone/: config_files.m4
(+50353 files in other folders)
